--- a/Style.css
+++ b/Style.css
@@ -1,14 +1,46 @@
+html,
+body{
+    padding: 0;
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 body{
     background-color:hsl(30, 38%, 92%);
     width:100vw;
     height:100vh;
     
 }
+*{
+    box-sizing: border-box;
+}
 main{
     display:flex;
-    width: 45rem;
-    height: 30%rem;
-    background-color: black;
-    margin:12rem 3rem 6rem 9rem ;
-    padding:5rem
+    align-items: center;
+    justify-content: center;
+    width: 50rem;
+    height: 50rem;
+    margin: auto;
+    background-color:#f4ebe4;
+    /* margin: 12rem 3rem 6rem 9rem;
+    padding: 5rem; */
+    
+}
+.section-one {
+    width: 20rem;
+    height: 30rem;
+    
+    
+
+}
+.section-one img{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px 0 0 5px;
+}
+.section-two {
+    width: 20rem;
+    height: 30rem;
+    background-color: #fefeff;
+    padding: 2rem;
+    border-radius:0 5px 5px 0;
 }
