--- a/Style.css
+++ b/Style.css
@@ -27,7 +27,7 @@ main{
 }
 .section-one {
     width: 20rem;
-    height: 30rem;
+    height: 35rem;
     
     
 
@@ -39,8 +39,42 @@ main{
 }
 .section-two {
     width: 20rem;
-    height: 30rem;
+    height: 35rem;
     background-color: #fefeff;
     padding: 2rem;
     border-radius:0 5px 5px 0;
+}
+.perfume,
+.solar {
+    color: #adacb1;
+}
+.pricing {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.first-price {
+    color: rgb(160, 138, 17);
+    font-size: 2rem;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+}
+.button-wrapper {
+    display: flex;
+    align-items: center;
+    background-color: black;
+    justify-content: center;
+    padding: 5px 0 5px 0;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.button-wrapper img {
+    width: 1rem;
+    height: 2rem;
+}
+button {
+    border: none;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
 }
